WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210549
REGRESSION(
r260114
): [ Mac and iOS ] imported/w3c/web-platform-tests/web-animations/timing-model/timelines/document-timelines.html is failing.
https://bugs.webkit.org/show_bug.cgi?id=210549
Summary
REGRESSION( r260114): [ Mac and iOS ] imported/w3c/web-platform-tests/web-ani...
Jason Lawrence
Reported
2020-04-15 08:10:37 PDT
imported/w3c/web-platform-tests/web-animations/timing-model/timelines/document-timelines.html Description: This test is flaky failing on iOS and Mac. The test appears to have regressed with
r260114
. History:
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fweb-animations%2Ftiming-model%2Ftimelines%2Fdocument-timelines.html&platform=ios&platform=mac
Diff: --- /Volumes/Data/slave/catalina-release-tests-wk1/build/layout-test-results/imported/w3c/web-platform-tests/web-animations/timing-model/timelines/document-timelines-expected.txt +++ /Volumes/Data/slave/catalina-release-tests-wk1/build/layout-test-results/imported/w3c/web-platform-tests/web-animations/timing-model/timelines/document-timelines-actual.txt @@ -1,4 +1,4 @@ -PASS Document timelines report current time relative to navigationStart +FAIL Document timelines report current time relative to navigationStart assert_equals: The current time matches requestAnimationFrame time expected 13.000000000000002 but got 13 PASS Child frames do not report negative initial times
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-04-15 08:10:58 PDT
<
rdar://problem/61828495
>
Jason Lawrence
Comment 2
2020-04-15 08:13:06 PDT
I was able to reproduce this issue with
r260114
, but cannot reproduce it with
r260113
.
r260114
: run-webkit-tests --iterations 99 --exit-after-n-failures 3 --force -f imported/w3c/web-platform-tests/web-animations/timing-model/timelines/document-timelines.html [30/99] imported/w3c/web-platform-tests/web-animations/timing-model/timelines/document-timelines.html failed unexpectedly (text diff) [46/99] imported/w3c/web-platform-tests/web-animations/timing-model/timelines/document-timelines.html failed unexpectedly (text diff) [48/99] imported/w3c/web-platform-tests/web-animations/timing-model/timelines/document-timelines.html failed unexpectedly (text diff) Exiting early after 3 failures. 45 tests run. 42 tests ran as expected, 3 didn't (54 didn't run):
r260113
: All 99 tests ran as expected.
alan
Comment 3
2020-04-15 11:21:18 PDT
Committed
r260140
: <
https://trac.webkit.org/changeset/260140
>
alan
Comment 4
2020-04-15 11:21:41 PDT
see also
bug 210559
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug