REGRESSION( r260114): [ Mac and iOS ] imported/w3c/web-platform-tests/web-animations/timing-model/timelines/document-timelines.html is failing. https://bugs.webkit.org/show_bug.cgi?id=210549 <rdar://problem/61828495>

Unreviewed.

Partial revert of r260114. See webkit.org/b/210559 for details.

* dom/ScriptedAnimationController.cpp:
(WebCore::ScriptedAnimationController::serviceRequestAnimationFrameCallbacks):

Canonical link: https://commits.webkit.org/223431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260140 268f45cc-cd09-0410-ab3c-d52691b4dbfc